# sbanken-cli

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/core/: authorize.rs  bank.rs  common.rs  credentials.rs  customers.rs  entities.rs  error.rs  interactive.rs  mod.rs
